--- a/index.html
+++ b/index.html
@@ -381,6 +381,14 @@
             <table class="resume__section">
                 <tr>
                     <td>
+                        <img src="svgs/IconTelegramGreen.svg" alt="Linkedin Icon">
+                    </td>
+                    <td>
+                        <a href="https://t.me/DCFApixels">t.me/DCFApixels</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <img src="svgs/IconEmailGreen.svg" alt="Email Icon">
                     </td>
                     <td>
@@ -394,10 +402,8 @@
                     </td>
                     <td>
                         <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">www.linkedin.com/in/mikhail~dcfapixels/</a>
-                        <!--<p>Due to internet restrictions in China, I can't use linkedin, my account is blocked :(</p>-->
                     </td>
                 </tr>
-                
                 <!--<tr>
                     <td>
                         <img src="svgs/IconDiscordGreen.svg" alt="">
