--- a/Project1.html
+++ b/Project1.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Pirate Passage</title>
 
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
