--- a/Project7.html
+++ b/Project7.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Max Slowmo</title>
 
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
